# agentic-backtesting

./: .gitignore  CHANGELOG.md  DOCS.md  EXAMPLES.md  LICENSE  QUICK_START.md  README.md  REBUILD_NOTES.md  REPO_CONTENT.md  REPO_NOTES.md  env.example  pyproject.toml
cursor_chats/: .archive_IMPLEMENTATION_SUMMARY.md  .archive_reflection_pattern_implementation.md  .archive_reflection_vs_basic.md  Agentic_Design_Patterns_Complete.md  bug_analysis_and_fixes.md  comprehensive_feature_test_report.md  confirmation_step_implementation.md  conversation_flow_improvements.md  extreme_promptification_summary.md  fixes_implemented_final.md  implementation_notes.md  lessons_learned_llm_code_generation.md  prd_background_agent.md  project_summary.md  reflection_pattern.md  user_experience_improvements.md  user_workflow_issues.md  workflow_test_final_results.md
docs/: configuration.md  runbooks.md
reports/: EXAMPLE_RSI_strategy_NVDA_2023.md  EXAMPLE_simple_buy_hold_AAPL_2024.md
scripts/: asciinema_demos.sh  db_backup.sh  db_migrate.sh  db_restore.sh  demo.sh  example_sessions.md  replay_recentchange.py  run_tests.sh  setup.sh  test_clarifications.py  test_columns.py  test_error_diagnosis.py  test_extraction.py  test_proceed.py  test_sections.py  test_title.py  test_validation.py  validate_scenarios.sh
services/: __init__.py
storage/: schema.sql
tests/: test_comprehensive.py  test_diff_parser.py  test_failure_recovery.py  test_minimal.py  test_spike_detection.py  test_spike_reports.py  test_terms.py  test_workflow.py
v2/: DEV_LOG.md  README.md  cli.py  test_all_features.py  (+2 more)
(+64 files in other folders)
