[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlbt"
version = "0.2.0"
description = "Natural Language Backtesting - Reflection Pattern"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "yfinance",
    "backtesting",
    "ta",
]

[project.scripts]
nlbt = "nlbt.cli:main"

