[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlbt"
version = "0.3.0"
description = "Natural Language Backtesting - LLM-Powered Reflection Engine"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "yfinance",
    "backtesting",
    "ta",
    "llm",
    "python-dotenv",
    "rich",
    "matplotlib",
    "markdown",
    "weasyprint",
]

[project.scripts]
nlbt = "nlbt.cli:main"

